# vibe_photos_v4

./: .cursorignore  .gitignore  AGENTS.md  AI_CODING_STANDARDS.md  AI_TASK_TRACKER.md  DEPENDENCIES.md  DIRECTORY_STRUCTURE.md  README.md  docker-compose.yml  init_project.sh  pyproject.toml  pyrightconfig.json
blueprints/m1/: m1_development_plan.md
blueprints/m2/: m2_perception_and_labels_blueprint.md
blueprints/phase_final/: HANDOVER.md  README.md  requirements-dev.txt  requirements.txt
blueprints/phase_final/architecture/: VECTOR_DB_CLARIFICATION.md  queue_and_task_management.md  system_architecture.md  vector_db_and_model_versioning.md
blueprints/phase_final/docs/: 01_requirements.md  02_solution_design.md  03_technical_choices.md  04_implementation_guide.md  05_siglip_blip_integration.md  06_review_alignment.md  07_m1_to_m2_m3_checklist.md
blueprints/phase_final/knowledge/: lessons_learned.md
blueprints/phase_final/poc/: few_shot_learner.py  hybrid_recognizer.py  siglip_blip_detector.py  simple_detector.py
blueprints/phase_final/research/: DOCUMENTATION_CLEANUP_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  REVIEW_REPORT_ARCHIVE.md  TECHNOLOGY_RESEARCH_ARCHIVE.md
blueprints/phase_final/specs/: database_schema.sql
config/: settings.example.yaml  settings.yaml
decisions/: AI_DECISION_RECORD.md
docs/: AI_CODING_NOTES.md  MODELS.md  QWEN_VL_EVAL_WORKFLOW.md  TEACHER_STUDENT_LABELING.md
docs/reports/: pg_cache_migration_review.md
scripts/: dump_primary_db.py  init_databases.py  restore_primary_db.py
src/utils/: __init__.py  logging.py
src/vibe_photos/: __init__.py  artifact_store.py  cache_helpers.py  cache_manifest.py  classifier.py  config.py  db.py  db_helpers.py  hasher.py  pipeline.py  preprocessing.py  projection_rebuild.py  scanner.py  task_queue.py  thumbnailing.py
src/vibe_photos/dev/: __init__.py  clear_cache.py  download_models.py  enqueue_celery.py  enqueue_detection.py  enqueue_heavy.py  preprocess.py  process.py  rebuild_cache.py  sync_cache_to_primary.py  worker.py
src/vibe_photos/eval/: __init__.py  attribute_thresholds.py  labels.py  object_errors.py  object_head.py
src/vibe_photos/labels/: __init__.py  build_object_prototypes.py  cluster_pass.py  duplicate_propagation.py  object_label_pass.py  repository.py  scene_label_pass.py  scene_schema.py  seed_labels.py  seed_object_labels.py
src/vibe_photos/ml/: __init__.py  coarse_categories.py  detection.py  model_presets.py  models.py  siglip_blip.py
src/vibe_photos/webui/: __init__.py
tests/: test_db_helpers.py  test_models_blip.py  test_object_label_pass_blacklist.py  test_object_label_pass_scene_filter.py  test_pipeline_helpers.py  test_pipeline_resume.py
tests/utils/: postgres.py
tools/: evaluate_auto_vs_human.py  qwen_to_ground_truth.py  qwen_vl_annotate_batch.py  sample_ground_truth_for_review.py  test_coarse_categories.py  train_attribute_head_from_qwen.py  train_object_head_from_qwen.py  train_scene_head_from_qwen.py
(+3 files in other folders)
